crates/parsing/src/grammar/snapshots/parsing__grammar__tests__arrow.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: a -> b -> c

Start { kind: ArrowType }
  Start { kind: VariableType }
    Start { kind: NameRef }
      Token { kind: Lower }
    Finish
  Finish
  Token { kind: RightArrow }
  Start { kind: ArrowType }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
    Token { kind: RightArrow }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish
