crates/parsing/src/grammar/snapshots/parsing__grammar__tests__case_with_underscore.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: case _ of
  [] -> []

Start { kind: CaseExpression }
  Token { kind: CaseKw }
  Start { kind: CaseHead }
    Start { kind: SectionExpression }
      Token { kind: Underscore }
    Finish
  Finish
  Token { kind: OfKw }
  Token { kind: LayoutStart }
  Start { kind: LayoutList }
    Start { kind: CaseBranch }
      Start { kind: CasePatterns }
        Start { kind: LiteralBinder }
          Start { kind: LiteralArray }
            Token { kind: LeftSquare }
            Token { kind: RightSquare }
          Finish
        Finish
      Finish
      Start { kind: UnconditionalBinding }
        Token { kind: RightArrow }
        Start { kind: WhereExpression }
          Start { kind: LiteralExpression }
            Start { kind: LiteralArray }
              Token { kind: LeftSquare }
              Token { kind: RightSquare }
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish
