crates/parsing/src/grammar/snapshots/parsing__grammar__tests__char-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: 'a'
Start { kind: LiteralBinder }
  Token { kind: LiteralChar }
Finish
