crates/parsing/src/grammar/snapshots/parsing__grammar__tests__complex-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Tuple (Cons 0 Nil) (Cons 1 Nil)
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
  Start { kind: ArgumentList }
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: ConstructorBinder }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
        Start { kind: ArgumentList }
          Start { kind: LiteralBinder }
            Token { kind: LiteralInteger }
          Finish
          Start { kind: ConstructorBinder }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
      Finish
      Token { kind: RightParenthesis }
    Finish
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: ConstructorBinder }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
        Start { kind: ArgumentList }
          Start { kind: LiteralBinder }
            Token { kind: LiteralInteger }
          Finish
          Start { kind: ConstructorBinder }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish
