crates/parsing/src/grammar/snapshots/parsing__grammar__tests__constrained.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: A => B => a

Start { kind: ConstrainedType }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
  Token { kind: RightThickArrow }
  Start { kind: ConstrainedType }
    Start { kind: ConstructorType }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Upper }
        Finish
      Finish
    Finish
    Token { kind: RightThickArrow }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish
