crates/parsing/src/grammar/snapshots/parsing__grammar__tests__constructor-zero-arity.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Nil
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
Finish
